--- a/src/index.html
+++ b/src/index.html
@@ -7,45 +7,51 @@
   <title>Currency Exchanger</title>
 </head>
 <body>
+  <div class="container">
+    <div class="p-5 mb-4 bg-light rounded-3">
+      <h1 class="display-5 fw-bold">Currency Converter</h1>
+    </div>
+    <form>
+      <h6> Exchanging currency has never been easier!</h6>
+      <p><i>Enter the amount below, select a base currency and choose the counter currency.</i></p>
+      <br>
 
-  <h1 class="display-5 fw-bold">Currency Converter</h1>
+      <label for="amount">Amount:</label>
+      <input id="amount" type="number" value="1" min="1" />
+      <br>
+      <br>
+      
+      <label for="text">From: </label>
+      <select class="form-control" id="currencyOne">
+        <option selected>USD</option>
+        <option>EUR</option>
+        <option>JPY</option>
+        <option>CNY</option>
+        <option>Woolong</option>
+        <option>CAD</option>
+        <option>KID</option>
+        <option>MXN</option>
+      </select>
+      <br>
 
-  <!-- input form -->
-  <label for="amount">Amount:</label>
-  <input id="amount" type="number" value="1" min="1">
-
-  <!-- currency one -->
-  <label for="text">From: </label>
-  <select class="form-control" id="currencyOne">
-    <option selected>USD</option>
-    <option>EUR</option>
-    <option>JPY</option>
-    <option>CNY</option>
-    <option>Woolong</option>
-    <option>CAD</option>
-    <option>KID</option>
-    <option>MXN</option>
-  </select>
-
-  <!-- currency two -->
-  <label for="text">To:</label>
-  <select class="form-control" id="currencyTwo">
-    <option>USD</option>
-    <option>EUR</option>
-    <option>JPY</option>
-    <option selected>CNY</option>
-    <option>Woolong</option>
-    <option>CAD</option>
-    <option>KID</option>
-    <option>MXN</option>
-  </select>
-
-  <!-- button -->
-  <button type="button" class="btn btn-primary" id="convertButton">Convert</button>
-
-  <!-- display -->
-  <h6><span class="total"></span></h6>
-  <h6><span class="showErrors"></span></h6>
+      <label for="text">To:</label>
+      <select class="form-control" id="currencyTwo">
+        <option>USD</option>
+        <option>EUR</option>
+        <option>JPY</option>
+        <option selected>CNY</option>
+        <option>Woolong</option>
+        <option>CAD</option>
+        <option>KID</option>
+        <option>MXN</option>
+      </select>
+      <br>
+      <button type="button" class="btn btn-primary" id="convertButton">Convert</button>
+    </form>
+    <br>
+    <h6><span class="total"></span></h6>
+    <br />
+    <h6><span class="showErrors"></span></h6>
   
 </body>
 </html>
