fix div error in html, add margin to body & center container text in styles

--- a/src/index.html
+++ b/src/index.html
@@ -15,11 +15,13 @@
       <h6> Exchanging currency has never been easier!</h6>
       <p><i>Enter the amount below, select a base currency and choose the counter currency.</i></p>
       <br>
+    </div>
 
       <label for="amount">Amount:</label>
       <input id="amount" type="number" value="1" min="1" />
       <br>
       <br>
+    
       
       <label for="text">From: </label>
       <select class="form-control" id="currencyOne">
@@ -46,11 +48,13 @@
         <option>MXN</option>
       </select>
       <br>
+      <br>
       <button type="button" class="btn btn-primary" id="convertButton">Convert</button>
     </form>
     <br>
+    <br>
     <h6><span class="total"></span></h6>
-    <br />
+    <br>
     <h6><span class="showErrors"></span></h6>
   
 </body>
