adjust text to improve readability, adjust boarder header

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,12 @@
 </head>
 <body>
   <div class="container">
-    <div class="p-5 mb-4 bg-light rounded-3">
+    <div class="mb-4 bg-light rounded-3">
       <h1 class="display-5 fw-bold">Currency Converter</h1>
     </div>
     <form>
-      <h6> Exchanging currency has never been easier!</h6>
-      <p><i>Enter the amount below, select a base currency and choose the counter currency.</i></p>
+      <h5> Exchanging currency has never been easier!</h5>
+      <h6><i>Enter the amount below, select a base currency and choose the counter currency.</i></h6>
       <br>
     </div>
 
@@ -53,9 +53,9 @@
     </form>
     <br>
     <br>
-    <h6><span class="total"></span></h6>
+    <h5><span class="total"></span></h5>
     <br>
-    <h6><span class="showErrors"></span></h6>
+    <h5><span class="showErrors"></span></h5>
   
 </body>
 </html>
