--- a/src/index.html
+++ b/src/index.html
@@ -53,5 +53,8 @@
     <h5><span class="total"></span></h5>
     <br>
     <h5><span class="showErrors"></span></h5>
+    <img src="img/woolong.png" alt="woolong coin">
+    <img src="img/woolong.png" alt="woolong coin">
+    <img src="img/woolong.png" alt="woolong coin">
   </body>
 </html>
