--- a/src/index.html
+++ b/src/index.html
@@ -53,8 +53,6 @@
     <h5><span class="total"></span></h5>
     <br>
     <h5><span class="showErrors"></span></h5>
-    <img src="img/woolong.png" alt="woolong coin">
-    <img src="img/woolong.png" alt="woolong coin">
-    <img src="img/woolong.png" alt="woolong coin">
+    <img src="img/woolong.png" alt="woolong coin" class="center">
   </body>
 </html>
